--- a/anm.org
+++ b/anm.org
@@ -1,3 +1,4 @@
+Everything that follows is a lie.
 * What this does so far
 ** declare the class anm_asset
    CLOCK: [2015-04-16 Thu 19:05]--[2015-04-16 Thu 19:34] =>  0:29
@@ -5,7 +6,7 @@ basic framework is done, have to come back to fill it in
 ** cUrl to get search page with asset numbers
 ** cUrl page for each asset
 ** parse each asset page with beautiful soup to get a dictionary of ANM_documents objects
-   CLOCK: [2015-04-16 Thu 21:34]
+   CLOCK: [2015-04-16 Thu 21:34]--[2015-04-16 Thu 23:30] =>  1:56
    CLOCK: [2015-04-16 Thu 19:34]--[2015-04-16 Thu 20:34] =>  1:00
 #+begin_src python
 import re
