--- a/readme.org
+++ b/readme.org
@@ -1,9 +1,15 @@
 * Overview
-A tool for scraping metadata for materials at the National Archives of Malaysia (ANM).
+A tool to scrape metadata for materials at the National Archives of Malaysia (ANM).
 
 Barely tested and under construction, use at your own risk! 
 
-The highest level function at the moment is "dump_from_search", which takes a URL or an html file of search results and outputs a dictionary of metadata for the hits in JSON format. There are some other special features incorporated if you look closely.  
+The most useful function at the moment is "dump_search_to_csv". To use it:
+
+1) [[http://ofa.arkib.gov.my/ofa/][Search manually]] for a list of records.
+2) Save the list of records to an html file, e.g. result.html.
+3) Call dump_search_to_csv("result.html")   
+
+This will download the pages for each asset in your search results and parse their metadata to a spreadsheet, "assets.csv". 
 * Features to add
 ** interactive document search
-** output to CSV, biblatex
+** output to biblatex
